<resources>
    <string name="app_name">M&amp;M Recipes</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register_now">Don`t have an account?  Register Now</string>
    <string name="action_login_now">Already have an account?  Login Now</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="error_fullname">Enter a valid Fullname</string>
    <string name="error_email">Enter a valid Email</string>
    <string name="error_password">Enter a valid Password</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="register_success">Registration Successful</string>
    <string name="register_email_exists">Email already exists, try Logging in</string>
    <string name="error_email_password">Invalid Email or Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="prompt_sendRecipe">Send a Recipe</string>
    <string name="hint_title">Recipe Title</string>
    <string name="hint_description">Description of Recipe</string>
    <string name="hint_category">Food Category</string>
    <string-array name="food_categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
        <item>Dessert</item>
    </string-array>

    <string name="hint_ingredients">Ingredients</string>
    <string name="hint_quantities">Quantities</string>
    <string name="hint_steps">Step-by-Step</string>

    <string name="hint_allergiesAndDiets">Allergies and Diets</string>
    <string name="prompt_vegan">Vegan</string>
    <string name="prompt_vegetarian">Vegetarian</string>
    <string name="prompt_gluten">Contains Gluten</string>
    <string name="prompt_diary">Contains Diary</string>
    <string name="prompt_soy">Contains Soy</string>
    <string name="prompt_alcohol">Contains Alcohol</string>
    <string name="prompt_sesame">Contains Sesame</string>
    <string name="prompt_seafood">Contains Seafood</string>
    <string name="prompt_wheat">Contains Wheat</string>
    <string name="prompt_celery">Contains Celery</string>
    <string name="prompt_nuts">Contains Nuts</string>
    <string name="prompt_peanuts">Contains Peanuts</string>
    <string name="prompt_eggs">Contains Eggs</string>
    <string name="prompt_pork">Contains Pork</string>

    <string name="hint_prepTime">Preparation Time (in minutes)</string>
    <string name="hint_cookTime">Cooking Time (in minutes)</string>
    <string name="hint_servings">Serving Number</string>
    <string name="hint_skillLevel">Skill Level</string>
    <string-array name="skill_level">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="hint_image">Image</string>
    <string name="hint_submitRecipe">Submit your Recipe</string>
    <string name="error_sendARecipe">Required to Proceed</string>
    <string name="sendARecipe_success">Your Recipe has been sent Successfully</string>

    <string name="prompt_home">Home</string>
    <string name="prompt_sendYourRecipe">Send your Recipe</string>
    <string name="prompt_profile">Profile</string>

    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="desserts">Desserts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
