<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorWhite" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView_register_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/mmrecipes" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_fullname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_register_logo"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            app:startIconDrawable="@drawable/ic_person_green"
            app:startIconTint="@color/colorPrimary" >

            <EditText
                android:id="@+id/editText_register_fullname"
                android:hint="@string/hint_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout_register_fullname"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            app:startIconDrawable="@drawable/ic_email_green"
            app:startIconTint="@color/colorPrimary" >

            <EditText
                android:id="@+id/editText_register_email"
                android:hint="@string/hint_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout_register_email"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            app:startIconDrawable="@drawable/ic_lock_green"
            app:startIconTint="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary" >

            <EditText
                android:id="@+id/editText_register_password"
                android:hint="@string/hint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_register_confirmPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout_register_password"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            app:startIconDrawable="@drawable/ic_lock_green"
            app:startIconTint="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimary" >

            <EditText
                android:id="@+id/editText_register_confirmPassword"
                android:hint="@string/hint_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout_register_confirmPassword"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/title_activity_register"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/divider_register"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/listDivider"
            android:layout_below="@+id/btn_register" />

        <TextView
            android:id="@+id/textView_register_loginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/action_login_now" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>